role controlelr validation. Email service

--- a/pv311_web_api.BLL/pv311_web_api.BLL.csproj
+++ b/pv311_web_api.BLL/pv311_web_api.BLL.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\pv311_web_api.DAL\pv311_web_api.DAL.csproj" />
   </ItemGroup>
 
