--- a/pv311_web_api/appsettings.Development.json
+++ b/pv311_web_api/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "NpgSqlLocal": "User ID=postgres;Password=qwerty;Host=localhost;Port=5432;Database=pv311_web_api;"
+  },
+  "SmtpSettings": {
+    "Email": "",
+    "Password": "",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
 }
