--- a/pv311_web_api/appsettings.Development.json
+++ b/pv311_web_api/appsettings.Development.json
@@ -9,8 +9,8 @@
     "NpgSqlLocal": "User ID=postgres;Password=qwerty;Host=localhost;Port=5432;Database=pv311_web_api;"
   },
   "SmtpSettings": {
-    "Email": "",
-    "Password": "",
+    "Email": "dmytro.potapchuk22@gmail.com",
+    "Password": "zclg zghn zchg vqcm",
     "Host": "smtp.gmail.com",
     "Port": 587
   },
