add compose file

--- a/pv311_web_api/appsettings.json
+++ b/pv311_web_api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NpgSqlLocal": "User ID=postgres;Password=qwerty;Host=db;Port=5432;Database=pv311_web_api;"
+    "NpgSqlLocal": "User ID=postgres;Password=qwerty;Host=localhost;Port=5444;Database=pv311_web_api;"
   },
   "SmtpSettings": {
     "Email": "dmytro.potapchuk22@gmail.com",
