add connection string enviroment

--- a/pv311_web_api/appsettings.json
+++ b/pv311_web_api/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NpgSqlLocal": "User ID=postgres;Password=qwerty;Host=localhost;Port=5444;Database=pv311_web_api;"
+    "NpgSqlLocal": "User ID=postgres;Password=qwerty;Host=localhost;Port=5444;Database=pv311_web_api;",
+    "NpgSql": ""
   },
   "SmtpSettings": {
     "Email": "dmytro.potapchuk22@gmail.com",
