--- a/compose.yaml
+++ b/compose.yaml
@@ -20,6 +20,8 @@ services:
       - "api_nt"
     ports:
       - "80:8080"
+    environment:
+      - "ConnectionStrings__NpgSql=User ID=postgres;Password=qwerty;Host=db;Port=5432;Database=pv311_web_api;"
     depends_on:
       db:
         condition: service_healthy
